# ChangeLog for squashmount

*squashmount-6.1
	Martin Väth <martin at mvath.de>:
	- Change meaning of squash_verbose.
	  Default prefers mksquashfs -quiet if available

*squashmount-6.0a
	Martin Väth <martin at mvath.de>:
	- Revert to COMPRESSION=xz default until lz4 is supported by
	  mainstream kernel

*squashmount-6.0
	Martin Väth <martin at mvath.de>:
	- Support COMPOPT_* to allow setting algorithm-specific option.
	- Default to COMPRESSION=lz4 (this is the reason for new major version)
	- Default to COMPOPT_LZ4=-Xhc
	- squashmount -vv list now outputs effective mksquashfs options
	- Fix handling of mksquash compression option.

*squashmount-5.0
	Martin Väth <martin at mvath.de>:
	- Use -always-use-fragments by default
	- Introduce DEFAULT_FRAGMENTS to avoid -always-use-fragments
	- Improve printed output of shell commands
	- Fix treatment of redirects
	- Provide example of special mksquash compression option

*squashmount-4.5
*squashmount-4.4
	Martin Väth <martin at mvath.de>:
	- Add sanity check before deleting DIR after first creation of
	  squashfile, see https://github.com/vaeth/squashmount/issues/1

*squashmount-4.3
	Martin Väth <martin at mvath.de>:
	- Add /etc/nosquash to $killpower default. Fix reference to --keep

*squashmount-4.2
	Martin Väth <martin at mvath.de>:
	- Fix severely misleading typo on manpage for File::Temp::newdir

*squashmount-4.1
	Martin Väth <martin at mvath.de>:
	- Support $killpower (/etc/killpower) for fast emergency shutdown

*squashmount-4.0
	Martin Väth <martin at mvath.de>:
	- Introduce --backup, --no-backup, --tempdir, --compresssion
	  for temporarily overriding configuration, e.g. with set/restore
	- Treat BACKUP as appendix if not an absolute path

*squashmount-3.7
	Martin Väth <martin at mvath.de>:
	- Make clearer that etc/squashmount.pl is only an example
	- Fix typo in getpwnam() getgrnam() calls in example configuration

*squashmount-3.6
	Martin Väth <martin at mvath.de>: